--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="section-container-one">
+        <div class="section-one">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href="#" class="header-link">header link one</a></li>
+                    <li><a href="#" class="header-link">header link two</a></li>
+                    <li><a href="#" class="header-link">header link three</a></li>
+                </ul>
+            </div>
+            <div class="one-content">
+                <div class="welcome-container">
+                    <h1 class="hero-header">This website is awesome</h1>
+                    <p class="hero-text">This website has some subtext that goes here under the main title. It's a smaller 
+                        font and the color is lower contrast.
+                    </p>
+                    <button class="hero-btn">Sign up</button>
+                </div>
+                <img src="./images/sandstorm.jpg" alt="welcome-img" width="480">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
