Add section two with style

--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
             </div>
         </div>
     </div>
+    <div class="section-two-container">
+        <div class="section-two">
+            <h1 class="section-two-header">Some Random Information.</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/snow.jpg" alt="sample image" width="150" class="card-img">
+                    <p>this is some subtext under an illurstration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/snow.jpg" alt="sample image" width="150" class="card-img">
+                    <p>this is some subtext under an illurstration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/snow.jpg" alt="sample image" width="150" class="card-img">
+                    <p>this is some subtext under an illurstration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/snow.jpg" alt="sample image" width="150" class="card-img">
+                    <p>this is some subtext under an illurstration or image</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
