--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
             </div>
         </div>
     </div>
+    <div class="section-three-container">
+        <div class="section-three">
+            <div class="quotes-container">
+                <p class="quote"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
+                    up space, or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice</i>
+                </p>
+                <p class="speaker">-Thor, God of Thunder</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
