--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             </div>
         </div>
     </div>
+    <div class="section-four-container">
+        <div class="section-four">
+            <div class="action-container">
+                <div class="four-main-text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there</p>
+                </div>
+                <button class="action-btn">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <p>Copyright © The Odin Project 2021</p>
+        </div>
+    </footer>
     
 </body>
 </html>
